--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
   },
   "dependencies": {
     "ember-cli-sass": "^5.1.0",
+    "ember-content-editable": "0.7.0",
     "ember-idx-tabs": "^0.1.4",
-    "ember-content-editable": "0.7.0"
+    "highlightjs": "^8.7.0"
   }
 }
