--- a/package.json
+++ b/package.json
@@ -21,27 +21,29 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.2.0",
     "ember-bootstrap": "0.6.0",
-    "ember-cli": "1.13.13",
+    "ember-ajax": "0.7.1",
+    "ember-cli": "2.3.0",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.5",
     "ember-cli-content-security-policy": "0.4.0",
-    "ember-cli-dependency-checker": "^1.1.0",
+    "ember-cli-dependency-checker": "^1.2.0",
     "ember-cli-htmlbars": "^1.0.1",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
-    "ember-cli-ic-ajax": "0.2.4",
     "ember-cli-inject-live-reload": "^1.3.1",
-    "ember-cli-qunit": "^1.0.4",
+    "ember-cli-qunit": "^1.2.1",
     "ember-cli-release": "0.2.8",
-    "ember-cli-sri": "^1.2.0",
+    "ember-cli-sri": "^2.0.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-data": "1.13.15",
+    "ember-data": "^2.3.0",
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^1.0.4",
     "ember-tooltips": "0.5.8",
-    "ember-truth-helpers": "1.2.0",
-    "phantomjs2": "^2.0.2"
+    "ember-truth-helpers": "1.2.0"
   },
   "dependencies": {
+    "ember-load-initializers": "^0.5.0",
+    "ember-resolver": "^2.0.3",
+    "loader.js": "^4.0.0",
     "ember-cli-sass": "^5.1.0",
     "ember-content-editable": "0.7.0",
     "ember-power-select": "0.7.2",
