--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.2.0",
-    "ember-bootstrap": "0.6.0",
     "ember-ajax": "0.7.1",
+    "ember-bootstrap": "0.6.0",
     "ember-cli": "2.3.0",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.5",
@@ -37,6 +37,7 @@
     "ember-data": "^2.3.0",
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^1.0.4",
+    "ember-lodash": "0.0.6",
     "ember-tooltips": "0.5.8",
     "ember-truth-helpers": "1.2.0"
   },
