--- a/bower.json
+++ b/bower.json
@@ -14,5 +14,8 @@
     "bootstrap-sass": "~3.3.5",
     "highlightjs": "~9.0.0",
     "bootstrap": "~3.3.5"
+  },
+  "devDependencies": {
+    "blanket": "5e94fc30f2e694bb5c3718ddcbf60d467f4b4d26"
   }
 }
