--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "ember-export-application-global": "^1.0.4",
     "ember-lodash": "0.0.6",
     "ember-tooltips": "0.5.8",
-    "ember-truth-helpers": "1.2.0"
+    "ember-truth-helpers": "1.2.0",
+    "ember-validations": "0.0.0"
   },
   "dependencies": {
     "ember-load-initializers": "^0.5.0",
