--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "ember-riak-explorer",
-  "version": "0.0.0",
-  "description": "Small description for ember-riak-explorer goes here",
-  "private": true,
+  "version": "0.2.0",
+  "description": "A frontend application which allows the exploration of a Riak cluster.",
+  "private": false,
   "directories": {
-    "doc": "doc",
     "test": "tests"
   },
   "scripts": {
@@ -12,16 +11,15 @@
     "start": "ember server",
     "test": "ember test"
   },
-  "repository": "",
+  "repository": "https://github.com/basho-labs/riak-explorer-gui",
   "engines": {
     "node": ">= 0.10.0"
   },
-  "author": "",
-  "license": "MIT",
+  "author": "Basho Labs Inc.",
+  "license": "Apache 2.0",
   "devDependencies": {
     "broccoli-asset-rev": "^2.2.0",
     "ember-ajax": "0.7.1",
-    "ember-bootstrap": "0.6.0",
     "ember-cli": "2.3.0",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.5",
@@ -38,20 +36,22 @@
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "^2.3.0",
     "ember-disable-proxy-controllers": "^1.0.1",
-    "ember-export-application-global": "^1.0.4",
-    "ember-lodash": "0.0.6",
-    "ember-tooltips": "0.5.8",
-    "ember-truth-helpers": "1.2.0",
-    "ember-validations": "0.0.0",
-    "ivy-tabs": "2.0.0"
+    "ember-export-application-global": "^1.0.4"
   },
   "dependencies": {
     "ember-load-initializers": "^0.5.0",
     "ember-resolver": "^2.0.3",
     "loader.js": "^4.0.0",
+
+    "ember-bootstrap": "0.6.0",
     "ember-cli-sass": "^5.1.0",
     "ember-content-editable": "0.7.0",
+    "ember-lodash": "0.0.6",
     "ember-power-select": "0.7.2",
-    "highlightjs": "^8.7.0"
+    "ember-tooltips": "0.5.8",
+    "ember-truth-helpers": "1.2.0",
+    "ember-validations": "0.0.0",
+    "highlightjs": "^8.7.0",
+    "ivy-tabs": "2.0.0"
   }
 }
