--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "qunit": "~1.20.0",
     "bootstrap-sass": "~3.3.5",
     "highlightjs": "~9.0.0",
-    "bootstrap": "~3.3.5"
+    "bootstrap": "~3.3.5",
+    "codemirror": "~5.13.0"
   },
   "devDependencies": {
     "blanket": "5e94fc30f2e694bb5c3718ddcbf60d467f4b4d26"
