--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "ember-tooltips": "0.5.8",
     "ember-truth-helpers": "1.2.0",
     "ember-validations": "0.0.0",
+    "ember-wormhole": "^0.3.5",
     "highlightjs": "^8.7.0",
     "ivy-codemirror": "1.4.0",
     "ivy-tabs": "2.0.0"
