--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ember-cli-blanket": "0.9.1",
     "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "^1.2.0",
+    "ember-cli-gzip": "^1.1.3",
     "ember-cli-htmlbars": "^1.0.1",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.3.1",
