--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "ember-cli-gzip": "^1.1.3",
+    "ember-cli-json-module": "0.0.2",
     "ember-cli-loading-slider": "^1.3.0",
     "ember-cli-sass": "^5.1.0",
     "ember-content-editable": "0.7.0",
