--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "ember-qunit-notifications": "0.1.0",
     "bootstrap-sass": "~3.3.5",
     "highlightjs": "~9.0.0",
-    "codemirror": "~5.13.0"
+    "codemirror": "~5.13.0",
+    "blob-polyfill": "^1.0.20150320"
   }
 }
