--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ember-data": "^2.5.0",
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
+    "ember-local-storage": "1.3.1",
     "ember-resolver": "^2.0.3",
     "loader.js": "^4.0.1"
   },
