--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "^2.5.0",
     "ember-export-application-global": "^1.0.5",
+    "ember-highcharts": "0.4.4",
     "ember-load-initializers": "^0.5.1",
     "ember-local-storage": "1.3.1",
     "ember-resolver": "^2.0.3",
+    "highcharts": "4.2.5",
     "loader.js": "^4.0.1"
   },
   "dependencies": {
