--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.2",
-    "ember-ajax": "0.7.1",
-    "ember-cli": "2.5.0",
+    "ember-ajax": "^2.0.1",
+    "ember-cli": "2.8.0",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.6",
     "ember-cli-dependency-checker": "^1.2.0",
@@ -31,14 +31,16 @@
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.4.0",
     "ember-cli-jshint": "^1.0.0",
-    "ember-cli-qunit": "^1.4.0",
-    "ember-cli-release": "0.2.8",
+    "ember-cli-qunit": "^2.1.0",
+    "ember-cli-release": "^0.2.9",
     "ember-cli-sri": "^2.1.0",
+    "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-data": "^2.5.0",
+    "ember-data": "2.8.1",
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
+    "ember-welcome-page": "^1.0.1",
     "loader.js": "^4.0.1"
   },
   "dependencies": {
@@ -50,7 +52,7 @@
     "ember-local-storage": "1.3.1",
     "ember-lodash": "0.0.6",
     "ember-modal-dialog": "0.8.4",
-    "ember-power-select": "0.7.2",
+    "ember-power-select": "1.0.0-beta.20",
     "ember-tooltips": "0.7.0",
     "ember-truth-helpers": "1.2.0",
     "ember-validations": "0.0.0",
