--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
+    "ember-route-action-helper": "2.0.2",
     "ember-uploader": "1.2.2",
     "loader.js": "^4.0.1"
   },
